crates/engine/src/parser/snapshots/engine__parser__oracle__pipeline_snapshot_tests__pipeline_class_card.snap
---
source: crates/engine/src/parser/oracle.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "SetClassLevel",
        "level": 2
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [
            "Red"
          ],
          "generic": 1
        }
      },
      "sub_ability": null,
      "duration": null,
      "description": "{1}{R}: Level 2",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "ClassLevelIs",
          "data": {
            "level": 1
          }
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [
    {
      "mode": "YouAttack",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "GenericEffect",
          "static_abilities": [
            {
              "mode": "Continuous",
              "affected": {
                "type": "ParentTarget"
              },
              "modifications": [
                {
                  "type": "AddKeyword",
                  "keyword": "FirstStrike"
                }
              ],
              "condition": null,
              "affected_zone": null,
              "effect_zone": null,
              "active_zones": [],
              "characteristic_defining": false,
              "description": "gain first strike"
            }
          ],
          "duration": "UntilEndOfTurn",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": "You",
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": "UntilEndOfTurn",
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "Whenever you attack, target creature you control gains first strike until end of turn.",
      "constraint": null,
      "condition": {
        "type": "ClassLevelGE",
        "level": 2
      },
      "batched": false
    }
  ],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": "You",
        "properties": []
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 1
        },
        {
          "type": "AddToughness",
          "value": 0
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Creatures you control get +1/+0."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
