crates/engine/src/parser/snapshots/engine__parser__oracle__pipeline_snapshot_tests__pipeline_simple_spell.snap
---
source: crates/engine/src/parser/oracle.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "DealDamage",
        "amount": {
          "type": "Fixed",
          "value": 3
        },
        "target": {
          "type": "Any"
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Deal 3 damage to any target.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
